[metadata]
name = sumo
version = 0.0.1
author = Dave Robbins
author_email = dave@daverobbins.dev
url = https://github.com/drobbins-ancile/sumo
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version < "3.8"